Module 2, OK, maybe

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello Coursera! It's a great course!</title>
+<meta charset="utf-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Module 2</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Hello Coursera!</h1>
+<h1>Our Menu</h1>
+
+<div class="row">
+     <div class="col-lg-4 col-md-6">
+           <div class="grey1">
+                 <div class="title">
+                                   <div id="title-color1">
+                                       <p>Chicken</p>
+                                   </div>
+                               </div>
+                <div>
+                <p class="text">Lemon chicken is really just a simple baked chicken recipe, jazzed up with some punchy ingredients that add lots of flavor without taking away from how super-healthy baked chicken breasts are. Our lemon chicken recipe is fast and easy—a recipe you might turn to on a busy weeknight when you need dinner to be simple as it can be.</p>
+                </div>
+          </div>
+
+
+    </div>
+
+
+
+
+
+
+<div class="col-lg-4 col-md-6">
+           <div class="grey2">
+                 <div class="title">
+                                   <div id="title-color2">
+                                       <p>Beef</p>
+                                   </div>
+                               </div>
+                <div>
+                <p class="text">Lemon chicken is really just a simple baked chicken recipe, jazzed up with some punchy ingredients that add lots of flavor without taking away from how super-healthy baked chicken breasts are. Our lemon chicken recipe is fast and easy—a recipe you might turn to on a busy weeknight when you need dinner to be simple as it can be.</p>
+                </div>
+          </div>
+
+
+    </div>
+
+
+
+
+
+
+<div class="col-lg-4 col-md-12">
+           <div class="grey3">
+                 <div class="title">
+                                   <div id="title-color3">
+                                       <p>Sushi</p>
+                                   </div>
+                               </div>
+                <div>
+                <p class="text">Lemon chicken is really just a simple baked chicken recipe, jazzed up with some punchy ingredients that add lots of flavor without taking away from how super-healthy baked chicken breasts are. Our lemon chicken recipe is fast and easy—a recipe you might turn to on a busy weeknight when you need dinner to be simple as it can be.</p>
+                </div>
+          </div>
+
+
+    </div>
+
+
+
+
+
+</div>
+
 </body>
 </html>
